--- a/styles/global.css
+++ b/styles/global.css
@@ -47,6 +47,8 @@ html {
   color: var(--text-color-primary);
 
   overflow-x: hidden;
+
+  scroll-behavior: smooth;
 }
 
 body {
@@ -86,9 +88,9 @@ a:hover {
     var(--brand-color-primary) 100%
   );
 
--webkit-background-clip: text;
-background-clip: text;
-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 ul[role="list"] {
